# rayanim

./: .gitignore  justfile  meson.build
scripts/: generate_clangd_config.py  get_raylib.py
src/: main.c  plug.c  plug.h  rayanim.c  rayanim.h  test.c
src/cargs/: cargs.c  cargs.h
